# sample_import

./: README.md
libs/shared1/: pyproject.toml
libs/shared1/src/shared1/: dad.py
libs/shared2/: setup.py
libs/shared2/src/shared2/: mom.py
projs/proj/: bing.py
