[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared1"
version = "1.2.0"
description = "A sample Python package"
authors = [{name = "Your Name", email = "your.email@example.com"}]
keywords = ["sample", "package"]


[options.packages.find]
include = ["src"]